0030946: Visualization - Image_AlienPixMap ignores 1-bit pixelformat when using FreeImage

Convert 1-bit image to 8-bit one during its loading because only greyscale images are supported by visualization